# AI_director

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
.claude/skills/grill-me/: SKILL.md
.claude/skills/improve-codebase-architecture/: SKILL.md
.claude/skills/prd-to-issues/: SKILL.md
.claude/skills/tdd/: SKILL.md
.github/workflows/: backend-deploy.yml
.tmp/: commit-msg.txt  commit_msg.txt  gen_payload.json  img_payload.json  tts_payload.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/middleware/: auth.py
backend/models/: schemas.py
backend/routers/: audio.py  chat.py  images.py  script.py  video.py
backend/services/: audio.py  elevenlabs_service.py  gemini_service.py  image.py  llm.py  minimax_service.py  tts_service.py  veo_service.py  voices.py
backend/storage/: firestore.py  gcs.py
backend/tests/: test_minimax_response.py
frontend/: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx
frontend/app/components/: CeltxView.jsx  ChatMessage.jsx  ChatPanel.jsx  ComicStoryboard.jsx  ScreenplayView.jsx  ScriptEditor.jsx  ScriptPanel.jsx  ShotCard.jsx  SlideshowPlayer.jsx  StatusBar.jsx  StepIndicator.jsx  VideoSlideshow.jsx
frontend/app/director/: page.jsx
frontend/app/hooks/: useApi.js  (+1 more)
frontend/components/: ChatPanel.jsx  Layout.jsx  PlaybackTab.jsx  ScriptTab.jsx  StoryboardTab.jsx
frontend/lib/: api.js  firebase.js
tools/: README.md
workflows/: README.md
(+7 files in other folders)
