[project]
name = "ai-director-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.5.0",
    "google-cloud-storage>=2.17.0",
    "google-cloud-firestore>=2.16.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = []
